what am i doing halp

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "neontan-syntax",
   "theme": "syntax",
   "version": "0.1.0",
-  "description": "Neontan syntax",
+  "description": "It's like azuretan, but neon... or something.",
   "keywords": [
     "syntax",
     "theme"
